<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main_fragment">

    <fragment
        android:id="@+id/nav_main_fragment"
        android:name="com.example.khmer_music_library_player.Fragment.MainFragment"
        android:label="@string/title_activity_navegation__drawer"
        tools:layout="@layout/fragment_main">

<!--        <action-->
<!--            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"-->
<!--            app:destination="@id/nav_album" />-->
    </fragment>
    <fragment
        android:id="@+id/nav_album"
        android:name="com.example.khmer_music_library_player.Fragment.AlbumFragment"
        android:label="@string/album"
        tools:layout="@layout/fragment_album">
<!--        <action-->
<!--            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"-->
<!--            app:destination="@id/nav_main_fragment" />-->

<!--        <argument-->
<!--            android:name="myArg"-->
<!--            app:argType="string" />-->
    </fragment>
    <fragment
        android:id="@+id/nav_production"
        android:name="com.example.khmer_music_library_player.Fragment.ProductionFragment"
        android:label="@string/production"
        tools:layout="@layout/fragment_production">
        <!--        <action-->
        <!--            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"-->
        <!--            app:destination="@id/nav_home" />-->

        <!--        <argument-->
        <!--            android:name="myArg"-->
        <!--            app:argType="string" />-->
    </fragment>
<!--    <fragment-->
<!--        android:id="@+id/nav_gallery"-->
<!--        android:name="com.example.khmer_music_library_player.Activity.Navegation.gallery.GalleryFragment"-->
<!--        android:label="@string/menu_gallery"-->
<!--        tools:layout="@layout/fragment_gallery" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_slideshow"-->
<!--        android:name="com.example.khmer_music_library_player.Activity.Navegation.slideshow.SlideshowFragment"-->
<!--        android:label="@string/menu_slideshow"-->
<!--        tools:layout="@layout/fragment_slideshow" />-->
</navigation>