<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textViewMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/khmer_os_battambang"
            android:layout_alignParentRight="true"
            android:text="15នាទី"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="14sp"
            android:fontFamily="@font/khmer_os_battambang"
            android:text="@string/auto_close_app"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginBottom="10sp"
        android:background="@color/colorPrimary"/>
    <NumberPicker
        android:id="@+id/picker_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:layout_marginRight="20dp"
        android:theme="@style/NumberPickerText">
    </NumberPicker>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDisAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            app:cardCornerRadius="0sp"
            app:cardBackgroundColor="@color/colorGray"
            android:innerRadius="0dp"
            android:shape="ring"
            android:layout_gravity="center"
            android:clickable="true"
            android:thicknessRatio="1.9"
            android:layout_centerHorizontal="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_weight="1"
            android:layout_margin="10dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disagree"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/khmer_os_battambang"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            app:cardCornerRadius="0sp"
            app:cardBackgroundColor="@color/colorPrimary"
            android:innerRadius="0dp"
            android:shape="ring"
            android:layout_gravity="center"
            android:clickable="true"
            android:thicknessRatio="1.9"
            android:layout_centerHorizontal="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_weight="1"
            android:layout_margin="10dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/khmer_os_battambang"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</LinearLayout>
